--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./spec --compilers js:babel-core/register",  
+    "test": "mocha ./spec --compilers js:babel-core/register",
     "lint": "eslint ./",
     "precommit": "npm test",
     "dev": "webpack-dev-server -d --config webpack.config.js --progress --colors"
@@ -27,6 +27,7 @@
     "babel-preset-react": "^6.11.1",
     "css-loader": "^0.27.3",
     "moment": "^2.18.1",
+    "prop-types": "^15.5.10",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-markdown": "^2.5.0",
@@ -40,6 +41,10 @@
   },
   "devDependencies": {
     "chai": "^4.0.0",
+    "eslint": "^3.19.0",
+    "eslint-plugin-jsx": "0.0.2",
+    "eslint-plugin-react": "^6.10.0",
+    "husky": "^0.13.4",
     "mocha": "^3.4.2",
     "webpack-dev-server": "^2.4.5"
   }
